# distmetric-xsimd

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  build_env.yml  build_wheels.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: wheels.yml
distance_metrics/: __init__.py  _config.py  _dist_metrics.pxd  _dist_metrics.pxd.tp  _dist_metrics.pyx.tp  _generate.py
distance_metrics/definitions/: chebyshev.def  euclidean.def  manhattan.def  minkowski.def  minkowski_w.def  seuclidean.def
distance_metrics/src/: _dist_optim.c  _dist_optim.cpp  abs.hpp  abs_double.hpp  abs_float.hpp  manhattan.hpp  manhattan_sse2.cpp  manhattan_sse3.cpp  utils.hpp
doc/notebooks/: demo.ipynb
slsdm/: __init__.py  _dist_metrics.pxd  _dist_metrics.pyx.tp  _generate.py  test.pyx
slsdm/definitions/: chebyshev.def  euclidean.def  manhattan.def  minkowski.def  minkowski_w.def  seuclidean.def
slsdm/src/: _dist_optim.cpp
slsdm/src/_src/: chebyshev.hpp  euclidean.hpp
tests/: test_distancemetrics.py
