[options]
packages = find:

[options.packages.find]
include = slsdm*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = tests
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    -rN

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[flake8]
# max line length for black
max-line-length = 88
target-version = ['py37']
# Default flake8 3.5 ignored flags
ignore=
    # check ignored by default in flake8. Meaning unclear.
    E24,
    # space before : (needed for how black formats slicing)
    E203,
    # do not assign a lambda expression, use a def
    E731,
    # do not use variables named 'l', 'O', or 'I'
    E741,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504
exclude=
    .git,
    __pycache__,
    build,

# It's fine not to put the import at the top of the file in the examples
# folder.
per-file-ignores =
    examples/*: E402

[mypy]
allow_redefinition = True
